# package-example

./: LICENSE  README.md  pyproject.toml
example/: __init__.py  __main__.py  _types.py  constants.py  core.py  doctor.py  paths.py  status.py  termui.py
example/commands/: doctor.py
example/models/: common.py  config.py
